<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme.AppBarOverlay">


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.AppBarOverlay"
                app:theme="@style/AppTheme.PopupOverlay">

                <android.support.v7.widget.SearchView
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="start"
                    android:iconifiedByDefault="false"
                    android:maxWidth="400dp">


                </android.support.v7.widget.SearchView>


                <ImageView
                    android:id="@+id/icon_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/logout" />

                <ImageView
                    android:id="@+id/icon_print"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="24dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/print" />


            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>


        <android.support.design.widget.AppBarLayout
            android:id="@id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBar1"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.TabLayout
                android:id="@+id/tab_bar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_scrollFlags="scroll"
                app:tabBackground="@drawable/ripple_button_grey"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@android:color/black"
                app:tabTextColor="@color/textColor" />

        </android.support.design.widget.AppBarLayout>


        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/sss"
            android:background="@color/colorPrimary"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        <android.support.design.widget.AppBarLayout
            android:id="@+id/sss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBar"

            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center|start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/status"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvId"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/number"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/name"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/departure_time"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvSales"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/goods"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvComments"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/comments"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:text="@string/total"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />


            </LinearLayout>

        </android.support.design.widget.AppBarLayout>


        <RelativeLayout
            android:id="@+id/rlFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ripple_for_enter_btn"
            android:clickable="true"
            android:minWidth="159dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="17dp"
                android:text="@string/print"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivFAB"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/printer" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlFABCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ripple_for_fab_cancell"
            android:clickable="true"
            android:minWidth="159dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvFABCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="17dp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivFABCancel"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/x_circle_white" />
        </RelativeLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</RelativeLayout>